<resources>
    <string name="app_name">MeetTheArrogance</string>
    <string name="login_password_phone_number_edit_view_hint">请输入手机号码</string>
    <string name="login_password_text_password_edit_view_hint">请输入用户密码</string>
    <string name="login_password_text_view_hint">忘记密码?</string>
    <string name="login_password_button_hint">登录</string>

    <string name="pick_photo">选择图片</string>
    <string name="pick_photo_without_camera">选择图片（不带拍照按钮且点击不预览图片）</string>
    <string name="pick_one_photo">选择单张图片</string>
    <string name="pick_photo_gif">选择gif图片</string>
    <string name="multiple_pick_photo">多次进入PhotoPicker选择图片</string>

    <string name="publish_empty_text">想说什么…</string>
    <string name="select_from_local">从相册中选取</string>
    <string name="tts_speak">点我说话</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="task">Task</string>
    <string name="record">Record</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>

    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="login">登录</string>
    <string name="new_user">新用户</string>
    <string name="user_name_error">用户名不合法，3到20位，首字母必须是字母</string>
    <string name="user_password_error">密码不合法，3到20位数字</string>
    <string name="register">注册</string>
    <string name="user_password_confirm">确认密码</string>
    <string name="user_password_confirm_error">密码不一致</string>
    <string name="registering">注册中...</string>
    <string name="register_failed">注册失败</string>
    <string name="register_failed_user_exist">用户已存在</string>
    <string name="register_success">注册成功</string>
    <string name="logining">登录中...</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="not_get_permission">未获取到权限</string>
    <string name="messages">消息</string>
    <string name="contacts">联系人</string>
    <string name="dynamic">动态</string>
    <string name="person">我的</string>
    <string name="logout">退(%s)出</string>
    <string name="logouting">退出登录...</string>
    <string name="logout_success">退出登录成功</string>
    <string name="logout_failed">退出登录失败</string>
    <string name="get_contacts_error">获取最新联系人失败</string>
    <string name="add_friend">添加好友</string>
    <string name="searching">拼命搜索中...</string>
    <string name="friend_not_found">未搜索到好友</string>
    <string name="add">添加</string>
    <string name="add_friend_reason">我是刘德华，请加我</string>
    <string name="add_friend_success">添加好友成功</string>
    <string name="add_friend_failed">添加好友失败</string>
    <string name="delete_friend">删除好友</string>
    <string name="delete_friend_message">您是否要和%s友尽？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="deleting_friend">正在删除好友...</string>
    <string name="delete_friend_failed">删除好友失败，请重试</string>
    <string name="delete_friend_success">删除好友成功</string>
    <string name="send">发送</string>
    <string name="chat_with">与%s聊天中</string>
    <string name="sending">正在发送...</string>
    <string name="send_success">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="no_text_message">非文本消息</string>
    <string name="get_new_message">获取到新消息</string>
    <string name="load_data_success">加载数据成功</string>
    <string name="load_more_data_success">加载更多数据成功</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="load_conversations_success">加载会话成功</string>
    <string name="max_unread_count">99+</string>
    <string name="receive_new_message">收到新消息</string>
    <string name="user_login_another_device">用户在其他设备登录</string>
    <string name="added">已添加</string>
</resources>
