<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_bg"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="-5dp"
            android:drawableTop="@drawable/selector_tab_home"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/home"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_bg"
            android:button="@null"
            android:drawablePadding="-5dp"
            android:drawableTop="@drawable/selector_tab_task"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/task"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_bg"
            android:button="@null"
            android:drawablePadding="-5dp"
            android:drawableTop="@drawable/selector_tab_record"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/record"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_bg"
            android:button="@null"
            android:drawablePadding="-5dp"
            android:drawableTop="@drawable/selector_tab_profile"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/profile"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_bg"
            android:button="@null"
            android:drawablePadding="-5dp"
            android:drawableTop="@drawable/selector_tab_more"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/more"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="16sp" />
    </RadioGroup>
</LinearLayout>
